--- a/FirstOne-TV/manifest.json
+++ b/FirstOne-TV/manifest.json
@@ -1,9 +1,9 @@
 {
   "name": "FirstOne TV",
-  "version": "0.3.0",
+  "version": "0.4.0",
   "description": "Removes clutter and reduces CPU load.",
   "content_scripts": [{
-    "matches": ["*://www.firstonetv.net/Live*"],
+    "matches": ["*://www.firstonetv.live/Live*"],
     "all_frames": true,
     "run_at": "document_start",
     "js": ["content.js"]
